mobile overflow fix

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body.safari .home-header-title {
 }
 .home-intro p {
 	max-width: max(60vw, 640px);
-	padding: 0 max(5vw, 40px);
+	margin: 0 max(5vw, 40px);
 }
 .home-intro p:nth-child(4n+1) {
 	transform: rotate(1deg);
@@ -143,7 +143,7 @@ body.safari .home-header-title {
 }
 .home-intro-divider {
 	border-bottom: 2px solid var(--dark);
-	width: 100%;
+	width: 99%;
 	flex-shrink: 0;
 }
 .home-intro-divider:nth-child(4n+2) {
